Payment page added

--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 	<title>Document</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="somefont.css">
+	<title>Das ist main page</title>
 </head>
 <body>
-	Demo project
-	<ul>
-		<li>First</li>
-		<li>Second</li>
-	</ul>
+	<a href="payment.html">Pay</a>
 	<p>Copyright</p>
 	<footer>&copy; 2021</footer>
 </body>
