Pay button added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="somefont.css">
 	<title>Das ist main page</title>
@@ -12,6 +11,7 @@
 <body>
 	<a href="payment.html">Pay</a>
 	<p>Copyright</p>
+	<button>Pay</button>
 	<footer>&copy; 2021</footer>
 </body>
 </html>
