--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="somefont.css">
 	<title>Das ist main page</title>
+	<script>/* Google Analytics */</script>
 </head>
 <body>
 	<a href="payment.html">Pay</a>
